--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,61 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+<!-- Selenium and Driver Manager-->
+    <selenium.version>4.17.0</selenium.version>
+    <webdrivermanager.version>5.6.3</webdrivermanager.version>
+<!-- TestNG Runner -->
+    <testng.version>7.9.0</testng.version>
+<!-- MySQL DB Connector -->
+    <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+<!-- POI Library to intract with Excel sheet and Data -->
+    <poi.version>5.2.5</poi.version>
+    <poi-ooxml.version>5.2.5</poi-ooxml.version>
+<!-- Loggers -->
+    <slf4j-api.version>2.0.11</slf4j-api.version>
+    <logback-classic.version>1.4.14</logback-classic.version>
+<!-- Extent Report and Extent manager -->
+    <extent-pdf-report.version>2.12.0</extent-pdf-report.version>
+    <extentreports.version>5.1.1</extentreports.version>
+
   </properties>
 
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${logback-classic.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j-api.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>${webdrivermanager.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>${testng.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>${selenium.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
